feat : 태그 할당 에러